Fix CompilerDaemonTest#testDaemonJvmOptionsParsing
Forgot to update test data after 560f1483e8fa71b258e6cc205f200625f92736f5 and 317c39f27d33c2ad05523c2a0a31eb78a07feaa5

    #KT-33048 Fixed